Enhance RAG, agent tracing, SSE, and demo UX